# Flask-Bitcoin-Blockchain-Simulation

./: README.md  app.py  pyproject.toml
doc/: doc_threads_python.txt  notes_bitcoin_blockchain  problematique  simulation_blockchain_bitcoin  trace.txt
scripts/: identical.sh  init.sh  run.sh
src/: globals.py
src/core/component_blockchain/: Block.py  Blockchain.py  Transaction.py
src/core/component_node/: NewTransaction.py  Node.py  ThreadClient.py  ThreadConnection.py  ThreadServer.py
src/infrastructure/: Writer.py  serializer.py
src/web/: FlaskAppWrapper.py  ThreadFlask.py
src/web/templates/: index_choose_node.html  index_create_transactions.html  index_main.html
tests/: test_block.py  test_threads_mainprog.py  test_transaction.py
